change(doc): small update

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -7,8 +7,8 @@
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
   <title>Embedded Basics with the ESP32</title>
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../elements/codelab.html">
+  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../elements/codelab.html">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <style is="custom-style">
     body {
@@ -24,8 +24,8 @@
                   environment="web"
                   feedback-link="https://github.com/googlecodelabs/your-first-pwapp/issues">
     
-      <google-codelab-step label="Introduction" duration="0">
-        <p>In this codelab you will get the basics of embedded programming.</p>
+      <google-codelab-step label="Welcome" duration="0">
+        <p>To the first codelab of the Munich Embedded Meetup Group </p>
 <h2><strong>What&#39;s the target audience of this tutorial?</strong></h2>
 <p>Everybody interested in programming C or C++</p>
 <p>No previous coding experience needed</p>
